[package]
name = "tem"
authors = ["devclub1"]
description = "A CLI tool to prepare your favorite templates blazingly fast"
license = "MIT"
repository = "https://github.com/devclub1/temple"
version = "0.1.3"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
home = "0.5.11"
toml = "0.8.19"
